[package]

name = "transducers"
version = "0.0.2"
authors = ["Ruud van Asseldonk <dev@veniogames.com>"]
description = "A transducer library for Rust"
keywords = ["transducer", "transducers", "transform", "reduce"]
license = "GPL-3.0"
readme = "readme.md"
homepage = "https://github.com/ruuda/transducers"
repository = "https://github.com/ruuda/transducers"
